--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://atix28.github.io/Bus-book/",
+  "homepage": "https://atix28.github.io/Book_Bus/",
   "name": "bus_booking",
   "version": "0.1.0",
   "private": true,
@@ -7,12 +7,12 @@
     "axios": "^0.18.0",
     "body": "^5.1.0",
     "bootstrap": "^4.3.1",
-    "gh-pages": "^2.1.1",
     "dotenv": "^7.0.0",
     "emailjs-com": "^2.3.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "firebase": "^6.6.2",
+    "gh-pages": "^2.1.1",
     "mdbreact": "^4.13.0",
     "nodemailer": "^6.1.1",
     "react": "^16.9.0",
@@ -45,8 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.1.1"
   }
 }
